Provide URL for the ns-3.15 release download

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -35,7 +35,8 @@ Release 3.15
 
 Availability
 ------------
-This release is not yet available.
+This release is available from: 
+http://www.nsnam.org/release/ns-allinone-3.15.tar.bz2
 
 Supported platforms
 -------------------
